Fixing alignment?

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,5 @@ body {
 }
 
 #content {
-	padding-top: 48%;
 	text-align: center;
 }
